--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
-.whiteCard {
-    border-radius: 10px;
-    background: var(--white, #FFF);
-    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25);
-}
+
 
 .selectedMenuItem {
     background: var(--Secondary_yellow, #C09562);
@@ -44,8 +40,8 @@
 
 .FooterContent {
     color: var(--text_color, #696E6E);
-padding-top: 10px;
-    font-family: Lato;
+    padding-top: 10px;
+    font-family: Urbanist;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
