--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body{
-    height: 100vh;
+
+body {
+  height: 100vh;
+}
+
+#root {
+  height: 100vh;
+}
+
+
+@layer utilities {
+  .whiteCard {
+    border-radius: 10px;
+    background: var(--white, #FFF);
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25);
   }
-   #root{
-    height: 100vh;
-  }
+}
