--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .selectedMenuItem {
     background: var(--Secondary_yellow, #C09562);
     color: var(--White, #FFF);
@@ -46,4 +44,46 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.teritiaryButton {
+    display: flex;
+    min-width: 85.08px;
+    min-height: 20.8px;
+    padding: 1.6px 6.534px 2.4px 8px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 2px;
+    background: #FFF;
+    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
+    color: #212121;
+    text-align: center;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16.8px;
+  margin-top: 10px;
+    text-transform: capitalize;
+    cursor: pointer;
+}
+.myorderCard{
+    color: #212121;
+text-align: justify;
+font-family: Roboto;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+margin-top: 15px;
+margin-bottom: 20px;
+paddding:'5px'
+}
+.myOrderitem{
+    color: #212121;
+font-family: Roboto;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 16.8px; /* 140% */
 }
