--- a/src/App.css
+++ b/src/App.css
@@ -63,27 +63,66 @@
     font-style: normal;
     font-weight: 500;
     line-height: 16.8px;
-  margin-top: 10px;
+    margin-top: 10px;
     text-transform: capitalize;
     cursor: pointer;
 }
-.myorderCard{
+
+.myorderCard {
     color: #212121;
-text-align: justify;
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-margin-top: 15px;
-margin-bottom: 20px;
-paddding:'5px'
+    text-align: justify;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    paddding: '5px'
 }
-.myOrderitem{
+
+.myOrderitem {
     color: #212121;
-font-family: Roboto;
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16.8px;
+    /* 140% */
+}
+
+.NeedHelp {
+    color: var(--Primary_Black, #101616);
+    font-family: Urbanist;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 19.5px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+   padding: 10px;
+    cursor: pointer;
+  
+    
+}
+.NeedHelp:hover {
+    background-color:#C09562
+}
+.Headerone{
+    color: #0F1111;
+    font-family: Urbanist;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+   
+
+}
+.paragraph{
+    color: #767676;
+font-family: Urbanist;
 font-size: 12px;
 font-style: normal;
 font-weight: 400;
-line-height: 16.8px; /* 140% */
+
 }
